...
                    android:layout_marginEnd="@dimen/triple_margin"
                    android:contentDescription="@string/user_icon_content_desc"
                    android:src="@drawable/ic_user_circle_lines_fa"
                    tools:src="@drawable/ic_user_circle_lines_fa" />

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_inputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"
                    app:errorText="@{viewModel.usernameErrorMessage}">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@={viewModel.username}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_inputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    app:errorText="@{viewModel.passwordErrorMessage}">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textWebPassword"
                        android:text="@={viewModel.password}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:id="@+id/login_btn"
                    style="@style/AppTheme.BigMaterialButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/login_button"
                    android:onClick="@{viewModel::onLoginButtonClick}"
...
