...
    <string name="service">Service</string>
    <string name="transport">Transportation</string>

    <!-- Strings related to Login -->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login_button">Login</string>
    <string name="error_username">Username can\'t be empty</string>
    <string name="error_password">Password can\'t be empty</string>
    <string name="welcome">Welcome</string>
    <string name="wrong_login_credentials">Incorrect username or password</string>

    <!-- Strings related to LendingScreen -->
...
